Fix spacing issues on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -76,7 +76,7 @@ p.job-title {
   .wrapper {
     padding-top: 0;
   }
-  
+
   .content {
     .leading-image {
       width: ms(10);
@@ -87,6 +87,13 @@ p.job-title {
 
       }
     }
+  }
+}
+
+img#profile {
+  @include media($large-screen-up) {
+    padding-right: $base-spacing;
+    padding-bottom: 0;
   }
 }
 
@@ -131,12 +138,8 @@ p.job-title {
       display: block;
       margin-left:auto;
       margin-right: auto;
+      padding-right: $base-spacing;
       padding-bottom: $base-spacing;
-
-      @include media($medium-screen-up) {
-        padding-right: $base-spacing;
-        padding-bottom: 0;
-      }
     }
   }
 
